[package]
name = "althea_rs"
version = "0.1.11"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "althea_kernel_interface",
    "settings",
    "clu",
    "antenna_forwarding_client",
    "antenna_forwarding_protocol",
    "auto_bridge",
    "rita_common",
    "rita_exit",
    "rita_client",
    "rita_bin",
    "test_runner",
    "integration_tests",
    "exit_trust_root",
]

# Production relase profile, every trick is used to reduce binary size
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
incremental = false

# testrunner should be fast to execute but also to compile
# making the binary smaller does us no good since it's not going
# on a router and not even being uploaded anywhere
[profile.testrunner]
inherits = "dev"
opt-level = 2

[workspace.dependencies]
deep_space = {version = "2.27", features = ["althea"], default-features=false}
num256 = "0.6"
web30 = "1.6"
clarity = "1.5"
awc = {version = "3.5", default-features = false, features=["openssl", "compress-gzip", "compress-zstd"]}
actix-web = { version = "4.9", default-features = false, features = ["openssl", "compress-gzip", "compress-zstd", "macros"] }
actix-web-httpauth = {version = "0.8.2"}
actix = "0.13"
actix-rt = "2.10"
althea_proto = "0.9"
# we don't call or us OpenSSL directly in this codebase, but by adding
# this dependency with this feature we can enforce that openssl is compiled
# in 'vendored' mode all the way down the tree. What this means is that we use
# an openssl implementation from the crate and not from the system, simplifying
# our build process for a lot of cross-compile situations
openssl = {version = "0.10", features = ["vendored"]}
openssl-probe = "0.1"
lettre = { version = "0.11", features = ["file-transport", "serde"]}