[package]
name = "althea_rs"
version = "0.1.11"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "althea_kernel_interface",
    "settings",
    "clu",
    "antenna_forwarding_client",
    "antenna_forwarding_protocol",
    "gnosis_bridge",
    "gravity_bridge",
    "rita_common",
    "rita_exit",
    "rita_client",
    "rita_client_registration",
    "rita_bin",
    "test_runner",
    "integration_tests",
]

# Production relase profile, every trick is used to reduce binary size
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
incremental = false

# testrunner should be fast to execute but also to compile
# making the binary smaller does us no good since it's not going
# on a router and not even being uploaded anywhere
[profile.testrunner]
inherits = "dev"
opt-level = 2

[workspace.dependencies]
deep_space = {version = "2.32.1", features = ["althea", "ethermint"]}
web30 = "1.15"
clarity = "1.7"
num256 = "0.6"
awc = {version = "3.2", default-features = false, features=["openssl", "compress-gzip", "compress-zstd"]}
althea_proto = "0.10"
cosmos-sdk-proto-althea = {version = "0.20", features = ["ethermint"]}
gravity_proto = "0.7"
futures = { version = "0.3", features = ["compat"] }
tokio = "1.40"