[package]
authors = ["Jehan <jehan.tremback@gmail.com>"]
description = "Gets information from and changes settings of kernel network stacks"
license = "Apache-2.0"
name = "althea_kernel_interface"
version = "0.1.0"
[dependencies]
failure = "0.1.3"
itertools = "0.7.9"
lazy_static = "1.2.0"
log = "0.4.6"
regex = "1.0.6"
eui48 = { git = "https://github.com/althea-mesh/eui48", features = ["serde"] }
althea_types = { path = "../althea_types" }
