[package]
authors = ["Jehan <jehan.tremback@gmail.com>"]
description = "Gets information from and changes settings of kernel network stacks"
license = "Apache-2.0"
name = "althea_kernel_interface"
version = "0.1.0"
edition = "2018"

[dependencies]
failure = "0.1"
itertools = "0.8"
lazy_static = "1.3"
log = "0.4"
regex = "1.1"
eui48 = { git = "https://github.com/althea-mesh/eui48", features = ["serde"] }
althea_types = { path = "../althea_types" }
