[package]
authors = ["Jehan <jehan.tremback@gmail.com>"]
description = "Gets information from and changes settings of kernel network stacks"
license = "Apache-2.0"
name = "althea_kernel_interface"
version = "0.1.0"
edition = "2018"

[dependencies]
oping = "0.3"
lazy_static = "1.4"
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
althea_types = { path = "../althea_types" }
ipnetwork = "0.20"
mac_address = "1.1.4"

[dependencies.regex]
version = "1.6"
default-features = false
features = ["std"]


[features]
integration_test = []
