[package]
authors = ["Jehan <jehan.tremback@gmail.com>"]
name = "althea_types"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"


[dependencies]
babel_monitor = { path = "../babel_monitor" }
num256 = "0.2"
base64 = "0.11"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
sodiumoxide = "0.2"
actix = { version = "0.7", optional = true}
clarity = "0.1"
arrayvec = {version= "0.5", features = ["serde"]}
failure = "0.1"
phonenumber = "0.2"
lettre = {version = "0.9", features = ["serde"]}

