[package]
authors = ["Jehan <jehan.tremback@gmail.com>"]
name = "althea_types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
babel_monitor = { path = "../babel_monitor" }
num256 = "0.5"
base64 = "0.13"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
crypto_box = "0.9"
clarity = "1.4"
arrayvec = { version = "0.7", features = ["serde"] }
phonenumber = "0.3.6"
lettre = { version = "0.10", features = ["serde"] }
ipnetwork = "0.20"
bincode = "1.3"
deep_space = { workspace = true }
rand = "0.8"

[dev-dependencies]
sodiumoxide = "0.2"
