[package]
name = "antenna_forwarding_protocol"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2021"

[dependencies]
althea_types = { path = "../althea_types" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
clarity = {workspace = true}
log = "0.4"
lazy_static = "1.5"
crypto_box = "0.9"

[dev-dependencies]
rand = "0.9"
