[package]
name = "auto-bridge"
version = "0.1.5"
authors = ["Jehan <jehan.tremback@gmail.com>, Justin <justin@althea.net>"]
edition = "2018"

[dependencies]
web30 = "1"
num256 = "0.5"
clarity = "1.1"
rand = "0.8"
num = "0.4"
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
tokio = "1.2"
futures = {version="0.3", features = ["thread-pool"]}

[dev-dependencies]
actix = "0.13"
futures = "0.3"
