[package]
name = "auto-bridge"
version = "0.1.5"
authors = ["Jehan <jehan.tremback@gmail.com>, Justin <justin@althea.net>"]
edition = "2018"

[dependencies]
web30 = "1.0"
num256 = "0.5"
clarity = "1.2"
log = "0.4"
serde_derive = "1.0"
serde = "1.0"

[dev-dependencies]
actix = "0.13"
futures = "0.3"
