[package]
name = "auto-bridge"
version = "0.1.5"
authors = ["Jehan <jehan.tremback@gmail.com>, Justin <justin@althea.net>"]
edition = "2021"

[dependencies]
web30 = {workspace = true}
num256 = {workspace = true}
clarity = {workspace = true}
rand = "0.8"
num = "0.4"
log = "0.4"
serde_derive = "1.0"
serde = "1.0"

[dev-dependencies]
actix = "0.13"
futures = "0.3"
