[package]
authors = ["jkilpatr <jkilpatr@redhat.com>"]
name = "babel_monitor"
version = "0.1.0"
[dependencies]
ascii = "0.9.1"
bufstream = "0.1.4"
env_logger = "0.6.0"
failure = "0.1.3"
ipnetwork = "0.13.1"
log = "0.4.6"

[dependencies.mockstream]
git = "https://github.com/lazy-bitfield/rust-mockstream.git"
