[package]
authors = ["jkilpatr <jkilpatr@redhat.com>"]
name = "babel_monitor"
version = "0.1.0"
edition = "2018"

[dependencies]
ascii = "0.9"
bufstream = "0.1"
env_logger = "0.6.0"
failure = "0.1"
ipnetwork = "0.12.8"
log = "0.4"

[dependencies.mockstream]
git = "https://github.com/lazy-bitfield/rust-mockstream.git"
