[package]
authors = ["jkilpatr <jkilpatr@redhat.com>"]
name = "babel_monitor_legacy"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
babel_monitor = { path = "../babel_monitor" }
ascii = "1.0"
env_logger = "0.9"
failure = "0.1"
ipnetwork = "0.18"
log = "0.4"
futures = "0.1"
tokio = "0.1"
serde = "1.0"
serde_derive = "1.0"
