[package]
authors = ["kingoflolz <wangben3@gmail.com>"]
name = "bounty_hunter"
version = "0.1.0"
[dependencies]
dotenv = "0.13.0"
env_logger = "0.6.0"
log = "0.4.6"
num256 = "0.1.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"

[dependencies.althea_types]
path = "../althea_types"

[dependencies.diesel]
features = ["sqlite"]
version = "1.3.3"

[dependencies.rouille]
default-features = false
version = "2.2.0"
