[package]
name = "bounty_hunter"
version = "0.1.0"
authors = ["kingoflolz <wangben3@gmail.com>", "Stan Drozd <drozdziak1@gmail.com>"]

[dependencies]
actix = "0.7.6"
actix-web = {version = "0.7.4", features = ["ssl"], default_features = false}
clarity = "0.1.13"
diesel = { version = "1.3.3", default-features = false, features = ["sqlite"] }
dotenv = "0.13.0"
env_logger = "0.6.0"
failure = "0.1.3"
futures = "0.1.25"
lazy_static = "1.2.0"
libc = "0.2.43"
log = "0.4.6"
num-traits = "0.2.6"
num256 = "0.1.3"
openssl = "0.10.15"
openssl-probe = "0.1.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
