[package]
name = "bounty_hunter"
version = "0.1.0"
authors = ["kingoflolz <wangben3@gmail.com>", "Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = {version = "0.7", features = ["ssl"], default_features = false}
clarity = "0.1"
diesel = { version = "1.4", default-features = false, features = ["sqlite"] }
dotenv = "0.14"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
lazy_static = "1.3"
libc = "0.2"
log = "0.4.6"
num-traits = "0.2"
num256 = "0.2"
openssl = "0.10"
openssl-probe = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
