[package]
authors = ["Justin <kilpatrickjustin@protonmail.ch>"]
name = "clu"
version = "0.0.1"
edition = "2021"

[dependencies]
settings = { path = "../settings" }
althea_kernel_interface = { path = "../althea_kernel_interface" }
althea_types = { path = "../althea_types" }
lazy_static = "1.5"
log = "0.4"
ipgen = "1.0.2"
rand = "0.9"
serde_json = "1.0"
clarity = {workspace = true}
deep_space = { workspace = true }

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std"]

[dev-dependencies]
crypto_box = "0.9"
