[package]
name = "exit_db"
version = "0.1.0"
authors = ["Ben <wangben3@gmail.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["sqlite"] }
dotenv = "0.13.0"
althea_types = { path = "../althea_types", features = ["actix"]}
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"
failure = "0.1.2"
