[package]
name = "exit_db"
version = "0.1.0"
authors = ["Ben <wangben3@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.14"
althea_types = { path = "../althea_types", features = ["actix"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
