[package]
name = "exit_trust_root"
version = "0.21.5"
edition = "2021"
license = "Apache-2.0"
description = "Server to provide a root of exit trust for Althea routers"

[lib]
name = "exit_trust_root"
path = "src/lib.rs"

[[bin]]
name = "exit_trust_root_server"
path = "src/bin.rs"

[dependencies]
clap = {version="4", features=["derive"]}
althea_types = { path = "../althea_types" }
awc = {workspace = true}
actix-web = {workspace = true}
openssl = {workspace = true}
openssl-probe = {workspace = true}
env_logger = "0.11"
log = "0.4"
clarity = "1.4"
web30 = "1.4"
phonenumber = "0.3.6"
actix = "0.13"
tokio = { version = "1.40", features = ["macros", "time"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
crossbeam = "0.8"
futures = "0.3"
lazy_static = "1.5"

[dev-dependencies]
actix-rt = {workspace=true}

[features]
development = []