[package]
name = "post_office"
version = "0.1.0"
authors = ["Justin Kilpatrick <kilpatrickjustin@protonmail.ch>"]

[dependencies]
config = "0.8"
lazy_static = "1.0"
docopt = "0.8.1"
diesel = { version = "1.0.0", features = ["sqlite"] }
log = "0.3"
env_logger = "0.4"
post_office_settings = { path = "./post_office_settings" }
exit_db = { path = "../exit_db" }
althea_types = { path = "../althea_types", features = ["actix"]}
dotenv = "0.9.0"

[dependencies.rouille]
version = "2.0"
default-features = false