[package]
name = "rita"
version = "0.5.18"
authors = ["Jehan <jehan.tremback@gmail.com>", "Ben <wangben3@gmail.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "rita_exit"
path = "src/exit.rs"

[[bin]]
name = "rita"
path = "src/client.rs"

[dependencies]
althea_kernel_interface = { path = "../althea_kernel_interface" }
althea_types = { path = "../althea_types", features = ["actix"]}
babel_monitor = { path = "../babel_monitor" }
clu = { path = "../clu" }
exit_db = { path = "../exit_db" }
num256 = "0.2"
settings = { path = "../settings" }

auto-bridge = {git = "https://github.com/althea-net/auto_bridge", tag = "v0.1.5"}
web30 = {git = "https://github.com/althea-mesh/web30", branch = "master"}
syslog = "4"
actix = "0.7"
actix-web = { version = "0.7", default_features = false, features= ["ssl"] }
actix-web-httpauth = {git = "https://github.com/althea-mesh/actix-web-httpauth"}
actix_derive = "0.4"
bytes = "0.4"
config = "0.9"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
docopt = "1.1"
dotenv = "0.14"
env_logger = "0.7"
failure = "0.1"
futures = "0.1"
handlebars = "2.0"
ipnetwork = "0.14"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_info"] }
minihttpse = "0.1"
mockito = "0.21"
mockstream = "0.0"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
trust-dns-resolver = "0.10"
byteorder = { version = "1.3", features = ["i128"] }
openssl-probe = "0.1"
num-traits="0.2"
clarity = "0.1"
eui48 = "0.4"
arrayvec = {version= "0.5", features = ["serde"]}
lettre = "0.9"
lettre_email = "0.9"
phonenumber = "0.2"
r2d2 = "0.8"
sha3 = "0.8"
hex-literal = "0.2"
sodiumoxide = "0.2"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std"]

[features]
default = []
development = []
