[package]
name = "rita_bin"
version = "0.19.6"
edition = "2018"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "rita_exit"
path = "src/exit.rs"

[[bin]]
name = "rita"
path = "src/client.rs"

[dependencies]
althea_kernel_interface = { path = "../althea_kernel_interface" }
althea_types = { path = "../althea_types"}
clu = { path = "../clu" }
actix-async = {package="actix", version = "0.13"}
actix-web-async = {package="actix-web", version = "4.0.1", default_features = false, features= ["openssl"] }
docopt = "1.1"
compressed_log = "0.5"
settings = { path = "../settings" }
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
log = { version = "0.4", features = ["release_max_level_info"] }
serde = "1.0"
serde_json = "1.0"
arrayvec = {version= "0.7", features = ["serde"]}
hex-literal = "0.3"
openssl-probe = "0.1"
env_logger = "0.9"
lazy_static = "1.4"
phonenumber = "0.3"
r2d2 = "0.8"
ctrlc = {version = "3.2.1", features = ["termination"]}
rita_common = { path = "../rita_common", default-features = false }
rita_client = { path = "../rita_client",  default-features = false }
rita_exit = { path = "../rita_exit", default-features = false }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }
jemallocator = {version = "0.3", optional = true}
# we don't call or us OpenSSL directly in this codebase, but by adding
# this dependency with this feature we can enforce that openssl is compiled
# in 'vendored' mode all the way down the tree. What this means is that we use
# an openssl implementation from the crate and not from the system, simplifying
# our build process for a lot of cross-compile situations
openssl = {version = "0.10", features = ["vendored"]}

[features]
jemalloc = ["jemallocator"]
# Features for big iron devices with more ram
server = ["jemalloc"]
# disables cors for dash debugging
dash_debug = []
# changes operator urls
operator_debug = []
dev_env = []
development = ["rita_common/dash_debug","rita_client/operator_debug","rita_common/integration_test"]
# Op tools dev environement
optools_dev_env = ["rita_client/dev_env"]

