[package]
name = "rita_bin"
version = "0.21.5"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "rita_exit"
path = "src/exit.rs"

[[bin]]
name = "rita"
path = "src/client.rs"

[[bin]]
name = "contract-util"
path = "src/contract-util.rs"

[[bin]]
name = "rita_extender"
path = "src/extender.rs"

[dependencies]
althea_kernel_interface = { path = "../althea_kernel_interface" }
althea_types = { path = "../althea_types" }
clu = { path = "../clu" }
actix = { workspace = true }
actix-web = { workspace = true }
docopt = "1.1"
compressed_log = "0.5"
settings = { path = "../settings" }
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
log = { version = "0.4", features = ["release_max_level_info"] }
serde = "1.0"
serde_json = "1.0"
arrayvec = { version = "0.7", features = ["serde"] }
hex-literal = "0.4"
env_logger = "0.11"
phonenumber = "0.3.6"
r2d2 = "0.8"
ctrlc = { version = "3.4.5", features = ["termination"] }
rita_common = { path = "../rita_common", default-features = false }
rita_client = { path = "../rita_client", default-features = false }
rita_db_migration = { path = "../rita_db_migration", default-features = false }
rita_exit = { path = "../rita_exit", default-features = false }
rita_extender = { path = "../rita_extender", default-features = false }
exit_trust_root = { path = "../exit_trust_root" }
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
jemallocator = { version = "0.5", optional = true }
ipnetwork = "0.20"
actix-rt = "2"
clarity = {workspace = true}
web30 = {workspace = true}
openssl = {workspace = true}
openssl-probe = {workspace = true}

[features]
jemalloc = ["jemallocator"]
# Features for big iron devices with more ram
server = ["jemalloc"]
# disables cors for dash debugging
dash_debug = []
# changes operator urls
operator_debug = []
dev_env = []
legacy_integration_test = [
    "development",
    "althea_kernel_interface/integration_test",
    "rita_common/legacy_integration_test",
]
development = [
    "rita_common/dash_debug",
    "rita_client/operator_debug",
    "rita_exit/operator_debug",
]
# Op tools dev environement
optools_dev_env = ["rita_client/dev_env", "rita_exit/dev_env"]