[package]
name = "rita_client"
version = "0.19.1"
edition = "2018"
license = "Apache-2.0"


[dependencies]
compressed_log = "0.5"
num-traits="0.2"
num256 = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
hex-literal = "0.3"
rita_common = { path = "../rita_common" }
futures01 = { package = "futures", version = "0.1"}
log = { version = "0.4", features = ["release_max_level_info"] }
althea_types = { path = "../althea_types" }
althea_kernel_interface = { path = "../althea_kernel_interface" }
antenna_forwarding_client = { path = "../antenna_forwarding_client" }
settings = { path = "../settings" }
sha3 = "0.10"
lettre = "0.9"
lettre_email = "0.9"
phonenumber = "0.3"
babel_monitor = { path = "../babel_monitor" }
babel_monitor_legacy = {path = "../babel_monitor_legacy"}
arrayvec = {version= "0.7", features = ["serde"]}
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
sodiumoxide = "0.2"
clu = { path = "../clu" }
web30 = "0.18"
actix = "0.7"
awc = "3.0.0-beta.18"
ipnetwork = "0.18"
actix-async = {package="actix", version = "0.12"}
actix-web = { version = "0.7", default_features = false, features= ["ssl"] }
actix-web-async = { package="actix-web", version = "4.0.0-beta.8", default_features = false, features= ["openssl"]}
actix-web-httpauth-async = { package="actix-web-httpauth", version = "0.6.0-beta.7"}
clarity = "0.5"

[lib]
name = "rita_client"
path = "src/lib.rs"

[features]
# changes operator urls
operator_debug = []
dev_env = []
